--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -681,19 +681,19 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/burger\ 2.png");
+    url("../img/5.png");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/burger\ 2.png");
+    url("../img/5.png");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/burger\ 2.png");
+    url("../img/5.png");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -701,7 +701,7 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/burger\ 2.png");
+    url("../img/5.png");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -709,15 +709,15 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/burger\ 2.png");
+    url("../img/5.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/burger\ 2.png");
+    url("../img/5.png");
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
 }
 
 .discover-drinks {
@@ -889,9 +889,12 @@ span {
 }
 
 /* DISCOVER */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 950px) {
   #discover {
     height: 140vh;
+  }
+  .discover-item {
+    height: 50%;
   }
   .discover-content {
     -webkit-box-orient: vertical;
