--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -940,9 +940,9 @@ span {
 
 /* HEIGHT */
 @media screen and (max-height: 600px) {
-  .boxes-content {
+  /* .boxes-content {
     padding: 2rem 0;
-  }
+  } */
 }
 
 @media screen and (max-height: 650px) {
@@ -959,7 +959,7 @@ span {
     padding: 1rem 2rem;
   }
   .boxes-content {
-    height: 59%;
+    height: 65%;
   }
   .boxes-h2 {
     font-size: 2.5rem;
@@ -1181,13 +1181,13 @@ span {
   -ms-flex-pack: center;
   justify-content: center;
   margin-bottom: 3rem;
-  padding: 2rem;
+  padding: 2rem 0rem;
 }
 
 .menu-nav-a-on {
   font-weight: 700;
   text-decoration: underline;
-  margin-right: 5rem;
+  margin-right: 2rem;
 }
 
 .menu-nav-a {
@@ -1905,7 +1905,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1350px) {
   .menu-logo {
     opacity: 0;
   }
