--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -852,8 +852,9 @@ span {
     flex-direction: column-reverse;
   }
   .boxes-content {
+    padding: 2rem 0;
     width: 90%;
-    height: 55%;
+    height: 65%;
   }
   .info-row {
     -webkit-box-orient: vertical;
@@ -939,14 +940,14 @@ span {
 }
 
 /* HEIGHT */
-@media screen and (max-height: 600px) {
+/* @media screen and (max-height: 600px) {
   .boxes-content {
     padding: 2rem 0;
   }
   .boxes-content {
     height: 65%;
   }
-}
+} */
 
 @media screen and (max-height: 650px) {
   .discover-h2 {
