--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -854,7 +854,8 @@ span {
   .boxes-content {
     padding: 2rem 0;
     width: 90%;
-    height: 100%;
+    height: 65%;
+    background-color: red;
   }
   .info-row {
     -webkit-box-orient: vertical;
