--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -345,6 +345,14 @@ header {
       to(rgba(12, 12, 12, 0.7))
     ),
     url("../img/2.jpg");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.7)),
+      to(rgba(12, 12, 12, 0.7))
+    ),
+    url("../img/2.jpg");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.7),
@@ -710,6 +718,14 @@ span {
       to(rgba(12, 12, 12, 0.7))
     ),
     url("../img/5.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.7)),
+      to(rgba(12, 12, 12, 0.7))
+    ),
+    url("../img/5.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.7),
@@ -739,6 +755,14 @@ span {
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
+    ),
+    url("../img/6.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.7)),
+      to(rgba(12, 12, 12, 0.7))
     ),
     url("../img/6.png");
   background-image: -webkit-gradient(
@@ -1058,6 +1082,14 @@ span {
       to(rgba(12, 12, 12, 0.849))
     ),
     url("../img/4.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.849)),
+      to(rgba(12, 12, 12, 0.849))
+    ),
+    url("../img/4.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
@@ -1260,6 +1292,14 @@ span {
       to(rgba(12, 12, 12, 0.849))
     ),
     url("https://source.unsplash.com/qE1jxYXiwOA");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.849)),
+      to(rgba(12, 12, 12, 0.849))
+    ),
+    url("https://source.unsplash.com/qE1jxYXiwOA");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
@@ -1393,6 +1433,14 @@ span {
       to(rgba(12, 12, 12, 0.849))
     ),
     url("../img/beer.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.849)),
+      to(rgba(12, 12, 12, 0.849))
+    ),
+    url("../img/beer.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
@@ -1420,6 +1468,14 @@ span {
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
+    ),
+    url("../img/coffee\ 2.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.849)),
+      to(rgba(12, 12, 12, 0.849))
     ),
     url("../img/coffee\ 2.png");
   background-image: -webkit-gradient(
@@ -1485,6 +1541,14 @@ span {
       to(rgba(12, 12, 12, 0.849))
     ),
     url("../img/tea\ 1.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.849)),
+      to(rgba(12, 12, 12, 0.849))
+    ),
+    url("../img/tea\ 1.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
@@ -1514,6 +1578,14 @@ span {
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
+    ),
+    url("../img/juice.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.849)),
+      to(rgba(12, 12, 12, 0.849))
     ),
     url("../img/juice.png");
   background-image: -webkit-gradient(
@@ -1579,6 +1651,14 @@ span {
       to(rgba(12, 12, 12, 0.849))
     ),
     url("../img/wine.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.849)),
+      to(rgba(12, 12, 12, 0.849))
+    ),
+    url("../img/wine.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
@@ -1626,6 +1706,14 @@ span {
       to(rgba(12, 12, 12, 0.849))
     ),
     url("../img/cocktail.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.849)),
+      to(rgba(12, 12, 12, 0.849))
+    ),
+    url("../img/cocktail.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
@@ -1653,6 +1741,14 @@ span {
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
+    ),
+    url("../img/alcohol.png");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(rgba(10, 10, 10, 0.849)),
+      to(rgba(12, 12, 12, 0.849))
     ),
     url("../img/alcohol.png");
   background-image: -webkit-gradient(
