--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -292,19 +292,19 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -312,7 +312,7 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -320,7 +320,7 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -328,7 +328,7 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -336,7 +336,7 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -344,7 +344,7 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -352,13 +352,13 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/22.jpg");
+    url("../img/2.gif");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -474,19 +474,19 @@ header {
 }
 
 .image-1 {
-  background-image: url("../img/avion.jpg");
+  background-image: url("../img/avion.gif");
   background-size: cover;
   background-position: center;
 }
 
 .image-2 {
-  background-image: url("../img/basta.jpg");
+  background-image: url("../img/basta.gif");
   background-size: cover;
   background-position: center;
 }
 
 .image-3 {
-  background-image: url("../img/motor.jpg");
+  background-image: url("../img/motor.gif");
   background-size: cover;
   background-position: center;
 }
@@ -689,19 +689,19 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/5.png");
+    url("../img/5.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/5.png");
+    url("../img/5.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/5.png");
+    url("../img/5.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -709,7 +709,7 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/5.png");
+    url("../img/5.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -717,7 +717,7 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/5.png");
+    url("../img/5.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -725,13 +725,13 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/5.png");
+    url("../img/5.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/5.png");
+    url("../img/5.gif");
   background-size: cover;
   background-position: center;
 }
@@ -744,19 +744,19 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/6.png");
+    url("../img/6.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/6.png");
+    url("../img/6.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/6.png");
+    url("../img/6.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -764,7 +764,7 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/6.png");
+    url("../img/6.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -772,7 +772,7 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/6.png");
+    url("../img/6.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -780,13 +780,13 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/6.png");
+    url("../img/6.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/6.png");
+    url("../img/6.gif");
   background-size: cover;
   background-position: center;
 }
@@ -1319,7 +1319,7 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/steak.png");
+    url("../img/steak.gif");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -1336,7 +1336,7 @@ span {
       from(rgba(10, 10, 10, 0.6)),
       to(rgba(12, 12, 12, 0.6))
     ),
-    url("../img/soup.png");
+    url("../img/soup.gif");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1353,7 +1353,7 @@ span {
       from(rgba(10, 10, 10, 0.75)),
       to(rgba(12, 12, 12, 0.75))
     ),
-    url("../img/salad.png");
+    url("../img/salad.gif");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -1370,7 +1370,7 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/nachos.png");
+    url("../img/nachos.gif");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1387,7 +1387,7 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/desert.png");
+    url("../img/desert.gif");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1401,19 +1401,19 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/beer.png");
+    url("../img/beer.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/beer.png");
+    url("../img/beer.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/beer.png");
+    url("../img/beer.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1421,7 +1421,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/beer.png");
+    url("../img/beer.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1429,7 +1429,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/beer.png");
+    url("../img/beer.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1437,13 +1437,13 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/beer.png");
+    url("../img/beer.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/beer.png");
+    url("../img/beer.gif");
 }
 
 .menu-image-coffee {
@@ -1454,19 +1454,19 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/coffee\ 2.png");
+    url("../img/coffee-2.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/coffee\ 2.png");
+    url("../img/coffee-2.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/coffee\ 2.png");
+    url("../img/coffee-2.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1474,7 +1474,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/coffee\ 2.png");
+    url("../img/coffee-2.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1482,7 +1482,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/coffee\ 2.png");
+    url("../img/coffee-2.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1490,13 +1490,13 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/coffee\ 2.png");
+    url("../img/coffee-2.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/coffee\ 2.png");
+    url("../img/coffee-2.gif");
   background-size: cover;
   background-position: bottom;
 }
@@ -1509,19 +1509,19 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/tea\ 1.png");
+    url("../img/tea-1.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/tea\ 1.png");
+    url("../img/tea-1.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/tea\ 1.png");
+    url("../img/tea-1.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1529,7 +1529,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/tea\ 1.png");
+    url("../img/tea-1.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1537,7 +1537,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/tea\ 1.png");
+    url("../img/tea-1.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1545,13 +1545,13 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/tea\ 1.png");
+    url("../img/tea-1.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/tea\ 1.png");
+    url("../img/tea-1.gif");
   background-size: cover;
   background-position: bottom;
 }
@@ -1564,19 +1564,19 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/juice.png");
+    url("../img/juice.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/juice.png");
+    url("../img/juice.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/juice.png");
+    url("../img/juice.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1584,7 +1584,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/juice.png");
+    url("../img/juice.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1592,7 +1592,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/juice.png");
+    url("../img/juice.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1600,13 +1600,13 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/juice.png");
+    url("../img/juice.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/juice.png");
+    url("../img/juice.gif");
   background-size: cover;
   background-position: bottom;
 }
@@ -1619,19 +1619,19 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/wine.png");
+    url("../img/wine.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/wine.png");
+    url("../img/wine.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/wine.png");
+    url("../img/wine.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1639,7 +1639,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/wine.png");
+    url("../img/wine.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1647,7 +1647,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/wine.png");
+    url("../img/wine.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1655,13 +1655,13 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/wine.png");
+    url("../img/wine.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/wine.png");
+    url("../img/wine.gif");
   background-size: cover;
   background-position: bottom;
 }
@@ -1674,19 +1674,19 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/cocktail.png");
+    url("../img/cocktail.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/cocktail.png");
+    url("../img/cocktail.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/cocktail.png");
+    url("../img/cocktail.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1694,7 +1694,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/cocktail.png");
+    url("../img/cocktail.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1702,7 +1702,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/cocktail.png");
+    url("../img/cocktail.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1710,13 +1710,13 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/cocktail.png");
+    url("../img/cocktail.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/cocktail.png");
+    url("../img/cocktail.gif");
 }
 
 .menu-image-alcohol {
@@ -1727,19 +1727,19 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/alcohol.png");
+    url("../img/alcohol.gif");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/alcohol.png");
+    url("../img/alcohol.gif");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/alcohol.png");
+    url("../img/alcohol.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1747,7 +1747,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/alcohol.png");
+    url("../img/alcohol.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1755,7 +1755,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/alcohol.png");
+    url("../img/alcohol.gif");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1763,13 +1763,13 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("../img/alcohol.png");
+    url("../img/alcohol.gif");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/alcohol.png");
+    url("../img/alcohol.gif");
 }
 
 .menu-h2 {
