--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,7 @@ html {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #242f3f;
+  background-color: rgb(35, 35, 35);
   display: flex;
   justify-content: center;
 }
