--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -560,6 +560,28 @@ header {
   margin-left: -4px;
 }
 
+.jump {
+  -moz-animation: jump 2s infinite;
+  -webkit-animation: jump 2s infinite;
+  animation: jump 2s infinite;
+}
+
+@keyframes jump {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-9px);
+  }
+  60% {
+    transform: translateY(-7px);
+  }
+}
+
 .arrow {
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
