--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2142,6 +2142,24 @@ footer {
   padding: 4rem 0;
 }
 
+.interior-img {
+  background-image: linear-gradient(
+      90deg,
+      rgba(10, 10, 10, 0.7),
+      rgba(12, 12, 12, 0.7)
+    ),
+    url("../img/4.gif");
+}
+
+.food-image {
+  background-image: linear-gradient(
+      90deg,
+      rgba(10, 10, 10, 0.7),
+      rgba(12, 12, 12, 0.7)
+    ),
+    url("../img/triple\ meat.jpg");
+}
+
 .gallery-container {
   margin: 0 auto;
   width: 90%;
@@ -2160,6 +2178,12 @@ footer {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+}
+
+.gallery-container a img {
+  -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .gallery-heading {
@@ -2184,7 +2208,7 @@ footer {
   border-bottom: 1px solid black;
 }
 
-.gallery-container img {
+.gallery-container a {
   padding: 1rem;
 }
 
