--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -696,7 +696,7 @@ header {
   -moz-box-shadow: 2px 2px 1px -1px rgba(0, 0, 0, 0.75);
   box-shadow: 2px 2px 1px -1px rgba(0, 0, 0, 0.75);
   letter-spacing: 1px;
-  padding: 1rem;
+  padding: 1.5rem 3rem;
   border: 1px solid rgb(114, 114, 114);
   -webkit-transition: 0.3s all;
   -o-transition: 0.3s all;
