--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1021,6 +1021,9 @@ span {
 /* RESPONSIVE */
 
 @media screen and (max-width: 500px) {
+  .boxes-h2 {
+    font-size: 2.5rem;
+  }
   .header-h1 {
     font-size: 7rem;
   }
@@ -1071,7 +1074,7 @@ span {
     flex-direction: column-reverse;
   }
   .boxes-content {
-    padding: 1rem 0;
+    padding: 2rem 0;
     width: 90%;
     height: 65%;
   }
