--- a/css/style.scss
+++ b/css/style.scss
@@ -304,7 +304,7 @@ nav {
       margin-right: 8rem;
 
       img {
-        border-radius: 15px;
+        border-radius: 10px;
         max-width: 35rem;
         height: auto;
       }
@@ -398,6 +398,7 @@ nav {
   &-text {
     color: #fff;
     margin-right: 2rem;
+    width: 150%;
 
     .view-code-1 {
       padding: 1rem 2rem;
@@ -552,6 +553,10 @@ footer {
 }
 
 @media only screen and (max-width: 1400px) {
+  .project-text {
+    width: 100%;
+  }
+
   .project-content {
     flex-direction: column;
 
@@ -608,7 +613,7 @@ footer {
   }
 
   #about {
-    height: 170vh;
+    height: 165vh;
 
     .about-container {
       flex-direction: column;
@@ -775,7 +780,7 @@ footer {
 
 @media only screen and (max-width: 400px) {
   #about {
-    height: 190vh;
+    height: 175vh;
   }
 }
 
@@ -789,9 +794,9 @@ footer {
   }
 }
 
-@media only screen and (max-height: 590px) {
+@media only screen and (max-height: 610px) {
   #about {
-    height: 230vh;
+    height: 210vh;
   }
 }
 
@@ -814,5 +819,17 @@ footer {
 
   .header-btn {
     margin-bottom: 1rem;
+  }
+}
+
+@media only screen and (min-height: 770px) {
+  #about {
+    height: 145vh;
+  }
+}
+
+@media only screen and (min-height: 840px) {
+  #about {
+    height: 90vh;
   }
 }
