small tweaks and added airbnb project

--- a/css/style.scss
+++ b/css/style.scss
@@ -171,6 +171,7 @@ html {
     transform: perspective(1px) translateZ(0);
     display: inline-block;
     font-size: 2rem;
+    border-radius: 3px;
 
     i {
       margin-left: 1rem;
