--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@ html {
           transform: perspective(1px) translateZ(0);
   display: inline-block;
   font-size: 2rem;
+  border-radius: 3px;
 }
 
 .header-btn i {
