cv replaced, tweaked small margin

--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,10 @@ html {
   opacity: 0;
 }
 
+.header .resume {
+  margin: 0.5rem 0 0.5rem 0;
+}
+
 .header-name a {
   text-decoration: none;
   background-color: #131335;
