--- a/css/style.scss
+++ b/css/style.scss
@@ -152,6 +152,10 @@ html {
     opacity: 0;
   }
 
+  .resume {
+    margin: 0.5rem 0 0.5rem 0;
+  }
+
   &-name a {
     text-decoration: none;
     background-color: rgb(19, 19, 53);
